Bot5 terminado, falta hacerle las pruebas de rigor 051122 0535

--- a/Bot2/src/testing.ipynb
+++ b/Bot2/src/testing.ipynb
@@ -2,22 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[WinError 183] No se puede crear un archivo que ya existe: 'C:\\\\Users\\\\crist\\\\OneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\\\\Venado\\\\Cris\\\\Traslado tesorería Bot\\\\Cuentas recaudadoras 2\\\\31.10.2022-F'\n",
+      "[WinError 183] No se puede crear un archivo que ya existe: 'C:\\\\Users\\\\crist\\\\OneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\\\\Venado\\\\Cris\\\\Traslado de tesoreria B5\\\\Cuentas recaudadoras 2\\\\05.11.2022-F'\n",
       "TRASLADO A BISA 0022\n"
      ]
     }
    ],
    "source": [
-    "#import os\n",
     "import win32com.client\n",
-    "#import sys\n",
     "import subprocess\n",
     "import time\n",
     "from openpyxl import Workbook\n",
@@ -33,7 +31,7 @@
     "\n",
     "    def startSAP(self, environment):\n",
     "        global sapGuiAuto, application, connection, session, session1, paths, login, user, psw\n",
-    "        wb = load_workbook(r'C:\\Users\\crist\\OneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\\Venado\\Cris\\Traslado tesorería Bot\\config.xlsx')\n",
+    "        wb = load_workbook(r\"C:\\Users\\crist\\OneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\\Venado\\Cris\\Traslado de tesoreria B5\\config.xlsx\")\n",
     "        ws = wb['config']\n",
     "        ws1 = wb['sapLogin']\n",
     "\n",
@@ -98,7 +96,7 @@
     "        # session1.findById(\"wnd[0]/tbar[0]/okcd\").text= \"f-02\"\n",
     "        # session1.findById(\"wnd[0]\").sendVKey(0)\n",
     "        z = today()\n",
-    "        x = f\"C:\\\\Users\\\\crist\\\\OneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\\\\Venado\\\\Cris\\\\Traslado tesorería Bot\\\\Cuentas recaudadoras\\\\{z}\\\\CUENTAS DE CAJA IVSA.xlsx\" \n",
+    "        x = f\"C:\\\\Users\\\\crist\\\\OneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\\\\Venado\\\\Cris\\\\Traslado de tesoreria B5\\\\Cuentas recaudadoras\\\\{z}\\\\CUENTAS DE CAJA IVSA.xlsx\" \n",
     "        y = xlsxFormatting(x)\n",
     "        wb2 = load_workbook(y)\n",
     "        ws2 = wb2['CAJAS RECAUDADORAS']\n",
@@ -121,13 +119,15 @@
     "                session.findById(\"wnd[0]/usr/ctxtSD_BUKRS-LOW\").setFocus\n",
     "                session.findById(\"wnd[0]/tbar[1]/btn[8]\").press()\n",
     "                a = f'wnd[0]/usr/lbl[9,{k}]'\n",
+    "                nd = f'wnd[0]/usr/lbl[28,{k}]'\n",
     "                f = f'wnd[0]/usr/lbl[53,{k}]'\n",
     "                c = f'wnd[0]/usr/lbl[64,{k}]'\n",
     "                im = f'wnd[0]/usr/lbl[67,{k}]'\n",
     "                asignacion = session.findById(a).text\n",
+    "                ndoc = session.findById(nd).text\n",
     "                fecha = session.findById(f).text\n",
     "                ct = session.findById(c).text\n",
-    "                importe = session.findById(im).text\n",
+    "                importe = session.findById(im).text                \n",
     "                rec = session.findById('wnd[0]/usr/lbl[37,1]').text\n",
     "                rec = str(rec)\n",
     "                txtCabDoc = 'TRASLADO A ' + bank\n",
@@ -140,6 +140,7 @@
     "                rec = rec.replace(' ', '.')\n",
     "            \n",
     "                asignacion = str(asignacion).replace(' ', '')\n",
+    "                ndoc = str(ndoc).replace(' ', '')\n",
     "                fecha = str(fecha).replace(' ', '')\n",
     "                l = fecha.index('.')\n",
     "                fecha = fecha[:l+3]\n",
@@ -168,11 +169,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
    "source": [
-    "\n"
+    "\n",
+    "l = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]*4 + [3, 3, 3, 4]\n",
+    "n = l.count(3)\n",
+    "print(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[WinError 183] No se puede crear un archivo que ya existe: 'C:\\\\Users\\\\crist\\\\OneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\\\\Venado\\\\Cris\\\\Traslado de tesoreria B5\\\\Cuentas recaudadoras 2\\\\05.11.2022-F'\n",
+      "[4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import win32com.client\n",
+    "import subprocess\n",
+    "import time\n",
+    "from openpyxl import Workbook\n",
+    "from openpyxl import load_workbook\n",
+    "import re\n",
+    "from usefulFunctions import *\n",
+    "\n",
+    "i = 3\n",
+    "j = 0\n",
+    "\n",
+    "z = today()\n",
+    "x = f\"C:\\\\Users\\\\crist\\\\OneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\\\\Venado\\\\Cris\\\\Traslado de tesoreria B5\\\\Cuentas recaudadoras\\\\{z}\\\\CUENTAS DE CAJA IVSA.xlsx\" \n",
+    "y = xlsxFormatting(x)\n",
+    "wb2 = load_workbook(y)\n",
+    "ws2 = wb2['CAJAS RECAUDADORAS']\n",
+    "xlsxCellsRange = []\n",
+    "\n",
+    "while True:\n",
+    "    accountNumber1 = ws2[f'C{i}'].value\n",
+    "    accountNumberStr1 = str(accountNumber1).replace(' ', '')\n",
+    "    accountNumber2 = ws2[f'D{i}'].value\n",
+    "    accountNumberStr2 = str(accountNumber2).replace(' ', '')\n",
+    "    bank =  ws2[f'E{i}'].value\n",
+    "    bank = str(bank).strip()\n",
+    "\n",
+    "    if len(accountNumberStr1)==9 and len(accountNumberStr2)==9 and type(accountNumber1)== int and type(accountNumber2)== int:\n",
+    "        xlsxCellsRange.append(i)\n",
+    "        i+=1\n",
+    "    else:\n",
+    "        i+=1\n",
+    "        j+=1\n",
+    "        if j > 3:\n",
+    "            break\n",
+    "        else:\n",
+    "            continue\n",
+    "print(xlsxCellsRange)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "xd\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "l = 'hola'\n",
+    "l = l.replace(' ', '')\n",
+    "l = l[4:13]\n",
+    "print(len(l))\n",
+    "print(l+'xd')"
    ]
   },
   {
@@ -181,15 +270,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
   }
  ],
  "metadata": {
