--- a/Bot2/src/testing.ipynb
+++ b/Bot2/src/testing.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[WinError 183] No se puede crear un archivo que ya existe: 'C:\\\\Users\\\\crist\\\\OneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\\\\Venado\\\\Cris\\\\Traslado de tesoreria B5\\\\Cuentas recaudadoras 2\\\\05.11.2022-F'\n",
-      "TRASLADO A BISA 0022\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import win32com.client\n",
     "import subprocess\n",
@@ -100,8 +91,9 @@
     "        y = xlsxFormatting(x)\n",
     "        wb2 = load_workbook(y)\n",
     "        ws2 = wb2['CAJAS RECAUDADORAS']\n",
-    "        i = 5\n",
+    "        i = 9\n",
     "        j = 0\n",
+    "        txtPath = r'C:\\Users\\crist\\OneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\\Venado\\Cris\\Traslado de tesoreria B5'\n",
     "\n",
     "        while True:\n",
     "            session.findById(\"wnd[0]/tbar[0]/okcd\").text = \"fbl3n\"\n",
@@ -112,53 +104,75 @@
     "            accountNumberStr2 = str(accountNumber2).replace(' ', '')\n",
     "            bank =  ws2[f'E{i}'].value\n",
     "            bank = str(bank).strip()\n",
+    "            asignaciones = []\n",
+    "            ndocs = []\n",
+    "            fechas = []\n",
+    "            cts = []\n",
+    "            importes = []\n",
+    "            superLista = []\n",
+    "\n",
     "            k = 11\n",
     "            if len(accountNumberStr1)==9 and len(accountNumberStr2)==9 and type(accountNumber1)== int and type(accountNumber2)== int:\n",
     "                session.findById(\"wnd[0]/usr/ctxtSD_SAKNR-LOW\").text = accountNumberStr1\n",
     "                session.findById(\"wnd[0]/usr/ctxtSD_BUKRS-LOW\").text = \"GV01\"\n",
     "                session.findById(\"wnd[0]/usr/ctxtSD_BUKRS-LOW\").setFocus\n",
     "                session.findById(\"wnd[0]/tbar[1]/btn[8]\").press()\n",
-    "                a = f'wnd[0]/usr/lbl[9,{k}]'\n",
-    "                nd = f'wnd[0]/usr/lbl[28,{k}]'\n",
-    "                f = f'wnd[0]/usr/lbl[53,{k}]'\n",
-    "                c = f'wnd[0]/usr/lbl[64,{k}]'\n",
-    "                im = f'wnd[0]/usr/lbl[67,{k}]'\n",
-    "                asignacion = session.findById(a).text\n",
-    "                ndoc = session.findById(nd).text\n",
-    "                fecha = session.findById(f).text\n",
-    "                ct = session.findById(c).text\n",
-    "                importe = session.findById(im).text                \n",
-    "                rec = session.findById('wnd[0]/usr/lbl[37,1]').text\n",
-    "                rec = str(rec)\n",
-    "                txtCabDoc = 'TRASLADO A ' + bank\n",
-    "                print(txtCabDoc)\n",
-    "                r2 = re.search('RECAUDADORA', rec).span()\n",
-    "                r2 = r2[1]\n",
-    "                r2+=1\n",
-    "                rec = rec[r2:]\n",
-    "                rec = rec.strip()\n",
-    "                rec = rec.replace(' ', '.')\n",
-    "            \n",
-    "                asignacion = str(asignacion).replace(' ', '')\n",
-    "                ndoc = str(ndoc).replace(' ', '')\n",
-    "                fecha = str(fecha).replace(' ', '')\n",
-    "                l = fecha.index('.')\n",
-    "                fecha = fecha[:l+3]\n",
-    "                ct = str(ct).replace(' ', '')\n",
-    "                importe = str(importe).replace(' ', '')\n",
+    "                for k in range(11, 20):\n",
+    "                    a = f'wnd[0]/usr/lbl[9,{k}]'\n",
+    "                    nd = f'wnd[0]/usr/lbl[28,{k}]'\n",
+    "                    f = f'wnd[0]/usr/lbl[53,{k}]'\n",
+    "                    c = f'wnd[0]/usr/lbl[64,{k}]'\n",
+    "                    im = f'wnd[0]/usr/lbl[67,{k}]'\n",
+    "                    asignacion = session.findById(a).text\n",
+    "                    ndoc = session.findById(nd).text\n",
+    "                    fecha = session.findById(f).text\n",
+    "                    ct = session.findById(c).text\n",
+    "                    importe = session.findById(im).text                \n",
+    "                    rec = session.findById('wnd[0]/usr/lbl[37,1]').text\n",
+    "                    rec = str(rec)\n",
+    "                    txtCabDoc = 'TRASLADO A ' + bank\n",
+    "                    print(txtCabDoc)\n",
+    "                    r2 = re.search('RECAUDADORA', rec).span()\n",
+    "                    r2 = r2[1]\n",
+    "                    r2+=1\n",
+    "                    rec = rec[r2:]\n",
+    "                    rec = rec.strip()\n",
+    "                    rec = rec.replace(' ', '.')\n",
+    "                \n",
+    "                    asignacion = str(asignacion).replace(' ', '')\n",
+    "                    ndoc = str(ndoc).replace(' ', '')\n",
+    "                    fecha = str(fecha).replace(' ', '')\n",
+    "                    l = fecha.index('.')\n",
+    "                    fecha = fecha[:l+3]\n",
+    "                    ct = str(ct).replace(' ', '')\n",
+    "                    importe = str(importe).replace(' ', '')\n",
+    "                    \n",
+    "                    asignaciones.append(asignacion)\n",
+    "                    ndocs.append(ndoc)\n",
+    "                    fechas.append(fecha)\n",
+    "                    cts.append(ct)\n",
+    "                    importes.append(importe)\n",
     "\n",
-    "                texto = 'LP.TRASPASO ' + rec + ' A ' + bank + ' ' + fecha\n",
+    "                    texto = 'LP.TRASPASO ' + rec + ' A ' + bank + ' ' + fecha\n",
+    "            superLista.append(asignaciones)\n",
+    "            superLista.append(ndocs)\n",
+    "            superLista.append(fechas)\n",
+    "            superLista.append(cts)\n",
+    "            superLista.append(importes)\n",
+    "            writeLog('', superLista, txtPath)\n",
     "# PROCESO -------------------------------------------------------------\n",
     "                \n",
-    "                break\n",
-    "                \n",
-    "                \n",
-    "\n",
-    "\n",
-    "            \n",
-    "    \n",
-    "    \n",
-    "\n",
+    "            break   \n",
+    "        a = superLista[4][0]\n",
+    "        a = a.replace(' ', '')\n",
+    "        a = a.replace('-', '')\n",
+    "        b = superLista[4][1]\n",
+    "        b = b.replace(' ', '')\n",
+    "        b = b.replace('-', '')\n",
+    "        print(a)\n",
+    "        print(b)\n",
+    "        if a == b:\n",
+    "            print('iguales')\n",
     "\n",
     "if __name__=='__main__':\n",
     "    environment= \"QAS - EHP8 on HANA\"\n",
@@ -169,38 +183,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7\n"
+      "4\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "l = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]*4 + [3, 3, 3, 4]\n",
-    "n = l.count(3)\n",
+    "l = [1, 1, 1, 1, 2]\n",
+    "n = l.count(1)\n",
     "print(n)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[WinError 183] No se puede crear un archivo que ya existe: 'C:\\\\Users\\\\crist\\\\OneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\\\\Venado\\\\Cris\\\\Traslado de tesoreria B5\\\\Cuentas recaudadoras 2\\\\05.11.2022-F'\n",
-      "[4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import win32com.client\n",
     "import subprocess\n",
@@ -243,7 +247,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from usefulFunctions import *\n",
+    "y = r\"C:\\Users\\crist\\Desktop\"\n",
+    "x = 'holi'\n",
+    "writeLog('', x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -251,17 +267,47 @@
      "output_type": "stream",
      "text": [
       "0\n",
-      "xd\n"
+      "1\n",
+      "2\n",
+      "3\n"
      ]
     }
    ],
    "source": [
+    "for f in range(4):\n",
+    "    print(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = ['110315097', '110315098', '110315099', '110315100', '110315101', '110315102', '110315103', '110315104', '110315105', '110315106', '110315107']\n",
     "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hola\n"
+     ]
+    }
+   ],
+   "source": [
     "l = 'hola'\n",
-    "l = l.replace(' ', '')\n",
-    "l = l[4:13]\n",
-    "print(len(l))\n",
-    "print(l+'xd')"
+    "l = l.replace('k', '')\n",
+    "print(l)"
    ]
   },
   {
