falta probar en la máquina virtual 091122 0504

--- a/Bot2/src/testing.ipynb
+++ b/Bot2/src/testing.ipynb
@@ -312,6 +312,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\crist\\OneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\\Venado\\Cris\\Traslado de tesoreria B5\\Bot2\n",
+      "c:\\Users\\crist\\OneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\\Venado\\Cris\\Traslado de tesoreria B5\n"
+     ]
+    }
+   ],
+   "source": [
+    "from usefulFunctions import *\n",
+    "from pathlib import Path\n",
+    "\n",
+    "x = getCurrentPath()\n",
+    "y = Path(x).parent\n",
+    "\n",
+    "print(x)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
