--- a/Bot2/src/testing.ipynb
+++ b/Bot2/src/testing.ipynb
@@ -293,26 +293,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hola\n"
+      "1\n",
+      "<class 'str'>\n",
+      "3\n",
+      "<class 'str'>\n",
+      "5\n",
+      "<class 'str'>\n"
      ]
     }
    ],
    "source": [
-    "l = 'hola'\n",
-    "l = l.replace('k', '')\n",
-    "print(l)"
+    "l = {'1':'2', '3':'4', '5':'6'}\n",
+    "for k in l:\n",
+    "    print(k)\n",
+    "    print(type(k))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +326,8 @@
      "output_type": "stream",
      "text": [
       "c:\\Users\\crist\\OneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\\Venado\\Cris\\Traslado de tesoreria B5\\Bot2\n",
-      "c:\\Users\\crist\\OneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\\Venado\\Cris\\Traslado de tesoreria B5\n"
+      "c:\\Users\\crist\\OneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\\Venado\\Cris\\Traslado de tesoreria B5\n",
+      "c:\\Users\\crist\\OneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\\Venado\\Cris\n"
      ]
     }
    ],
@@ -330,9 +337,88 @@
     "\n",
     "x = getCurrentPath()\n",
     "y = Path(x).parent\n",
+    "z = Path(y).parent\n",
     "\n",
     "print(x)\n",
-    "print(y)"
+    "print(y)\n",
+    "print(z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "adre\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = 'reconchadetumadre'\n",
+    "l = l[-4:]\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hoa\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = 'hola'\n",
+    "l = l[:2] + l[-1:]\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10.4\n",
+    "print(x/2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 5 \n",
+    "float(x)\n",
+    "print(x)\n",
+    "print(type(x))"
    ]
   },
   {
@@ -364,7 +450,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "43973268aa23c7cf4b4cafe0e819fac9b2412fcc991a21988492c3271a4e3f9b"
+    "hash": "51cc78d34587b09ee91d2d697f6a382f71fd571bca51a0b055831b3eb20def68"
    }
   }
  },
