--- a/Bot2/src/aprendiendo.ipynb
+++ b/Bot2/src/aprendiendo.ipynb
@@ -161,20 +161,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "c:\\Users\\crist\\OneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\\Venado\\Cris\\Traslado de tesoreria B5\\Bot2\\src\n",
+      "c:\\Users\\crist\\OneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\\Venado\\Cris\\Traslado de tesoreria B5\\Bot2\\src\n",
+      "c:\\Users\\crist\\OneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\\Venado\\Cris\\Traslado de tesoreria B5\\Bot2\n",
+      "c:\\Users\\crist\\OneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\\Venado\\Cris\\Traslado de tesoreria B5\n",
+      "c:\\Users\\crist\\OneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\\Venado\\Cris\n"
      ]
     }
    ],
    "source": [
-    "x = 00000000\n",
-    "print(x)"
+    "from usefulFunctions import *\n",
+    "\n",
+    "x = currentPathFolder\n",
+    "y = currentPathFolder\n",
+    "z = currentPathParentFolder\n",
+    "z1 = currentPathGrandpaFolder\n",
+    "z2 = currentPathGrandpaFolderParent\n",
+    "print(x)\n",
+    "print(y)\n",
+    "print(z)\n",
+    "print(z1)\n",
+    "print(z2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "om\n"
+     ]
+    }
+   ],
+   "source": [
+    "l =  'holacomoestas'\n",
+    "l = l[5:7]\n",
+    "print(l)\n"
    ]
   },
   {
