--- a/Bot2/src/aprendiendo.ipynb
+++ b/Bot2/src/aprendiendo.ipynb
@@ -212,6 +212,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = 'holacomoestas'\n",
+    "x = 'hola' in l\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
