--- a/src/aprendiendo.ipynb
+++ b/src/aprendiendo.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Jueves\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def fecha_a_dia(fecha):\n",
     "    import datetime\n",
@@ -27,108 +19,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-1\n",
-      "3\n"
-     ]
-    }
-   ],
-   "source": [
-    "l = 'holaholahola'\n",
-    "n = l.count('h')\n",
-    "s = l.find('x')\n",
-    "print(s)\n",
-    "print(n)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "def diadesemana(fecha):\n",
-    "    dias_semana = {\n",
-    "    0: \"Lunes\",\n",
-    "    1: \"Martes\",\n",
-    "    2: \"Miércoles\",\n",
-    "    3: \"Jueves\",\n",
-    "    4: \"Viernes\",\n",
-    "    5: \"Sábado\",\n",
-    "    6: \"Domingo\",\n",
-    "    }\n",
-    "    dia_ingresado = datetime.date(int(fecha[2]), int(fecha[1]), int(fecha[0]))\n",
-    "    dia_siguiente = dia_ingresado + datetime.timedelta(days=2)\n",
-    "    return dias_semana[dia_siguiente.weekday()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 3, 4, 5, 7, 8, 10]\n"
-     ]
-    }
-   ],
-   "source": [
-    "def commons(list1, list2):\n",
-    "        return list(set(list1).intersection(list2))\n",
-    "\n",
-    "l1 = [1,2,3,4,5,6,7,8,9,10]\n",
-    "l2 = [1,3,4,5,7,8,10, 11, 12, 13]\n",
-    "print(commons(l1,l2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not tuple",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [7], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m l \u001b[39m=\u001b[39m [\u001b[39m1\u001b[39m,\u001b[39m2\u001b[39m,\u001b[39m3\u001b[39m,\u001b[39m4\u001b[39m,\u001b[39m5\u001b[39m,\u001b[39m6\u001b[39m,\u001b[39m7\u001b[39m,\u001b[39m8\u001b[39m,\u001b[39m9\u001b[39m,\u001b[39m10\u001b[39m]\n\u001b[1;32m----> 2\u001b[0m l2 \u001b[39m=\u001b[39m l[\u001b[39m0\u001b[39;49m, \u001b[39m1\u001b[39;49m]\n\u001b[0;32m      3\u001b[0m \u001b[39mprint\u001b[39m(l2)\n",
-      "\u001b[1;31mTypeError\u001b[0m: list indices must be integers or slices, not tuple"
-     ]
-    }
-   ],
-   "source": [
-    "l = [1,2,3,4,5,6,7,8,9,10]\n",
-    "l2 = l[0, 1]\n",
-    "print(l2)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   a  b  c  d  e  f  g  h  i   j\n",
-      "0  1  2  3  4  5  6  7  8  9  10\n",
-      "1  a  b  c  d  e  f  g  h  i   j\n"
-     ]
-    }
-   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -147,30 +40,53 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
+    "from usefulObjets import sapInterfaceJob\n",
+    "\n",
+    "preApprovedParametersList = []\n",
+    "parametersList2 = []\n",
+    "\n",
+    "l = []\n",
+    "l1 = ['23.12.2022', '22.12.2022', '21.12.2022', '20.12.2022', '19.12.2022', '18.12.2022', '17.12.2022', '16.12.2022', '15.12.2022', '14.12.2022', '13.12.2022', '12.12.2022', '11.12.2022', '10.12.2022', '09.12.2022', '08.12.2022', '07.12.2022', '06.12.2022', '05.12.2022', '04.12.2022', '03.12.2022', '02.12.2022', '01.12.2022']\n",
+    "l2 = ['1', '2', '3', '4-', '5', '6-', '7', '8', '9-', '10', '11', '12', '13', '14-', '15', '16', '17', '18', '19', '20', '21-', '22', '23']\n",
+    "parametersList2.append(l)\n",
+    "parametersList2.append(l)\n",
+    "parametersList2.append(l1)\n",
+    "parametersList2.append(l)\n",
+    "parametersList2.append(l2)\n",
+    "\n",
+    "l3 = ['23.12.2022', '15.12.2022', '08.12.2022', '01.12.2022']\n",
+    "l4 = ['1-', '9-', '17-', '23-']\n",
+    "l5 = ['11111111111 BELZA GUTIERREZ CONDORI', '11111111111 JOSE LUIS ALEJANDRO RODRIGUEZ', '11111111111 NELVI JUANITA ROMERO', '11111111111 holis']\n",
+    "preApprovedParametersList.append(l)\n",
+    "preApprovedParametersList.append(l)\n",
+    "preApprovedParametersList.append(l3)\n",
+    "preApprovedParametersList.append(l)\n",
+    "preApprovedParametersList.append(l4)\n",
+    "preApprovedParametersList.append(l5)\n",
+    "\n",
+    "x = sapInterfaceJob()\n",
+    "x.testingAccounts(preApprovedParametersList, parametersList2)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = ['z', 'z', 'z', 'z', 'z', 'z', 'z', 'z', 'z', 'z', 'z', 'z', 'z', 'z', 'z', 'z', 'z', 'z', 'z', 'z', 'z', 'z', 'z']\n",
+    "print(len(l))"
+   ]
   },
   {
    "cell_type": "code",
