bot5 finalizado version 1.01

--- a/src/aprendiendo.ipynb
+++ b/src/aprendiendo.ipynb
@@ -90,6 +90,64 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PARADA/ROJASJUANGILBERTO-\n",
+      "PARADA ROJAS JUAN GILBERTO\n",
+      "['/', '-']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "\n",
+    "l = '9811-237828 PARADA /ROJAS JUAN GILBERTO-'\n",
+    "\n",
+    "l = l[12:]\n",
+    "l2 = l.replace(' ', '')\n",
+    "x = re.findall(r'[\\W]', l2)\n",
+    "\n",
+    "for i in x:\n",
+    "    l = l.replace(i, '')\n",
+    "print(l2)\n",
+    "print(l)\n",
+    "print(x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GENARO VALVERDE RIBERA\n",
+      "['04597352SC ']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "l = '04597352SC GENARO VALVERDE RIBERA'\n",
+    "x = re.findall(r'\\d+-*\\d+\\w*\\s', l)\n",
+    "\n",
+    "for i in x:\n",
+    "    l = l.replace(i, '')\n",
+    "print(l)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
