--- a/src/aprendiendo.ipynb
+++ b/src/aprendiendo.ipynb
@@ -309,36 +309,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\crist\\OneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\\Venado\\Cris\\Bot5\\Migraciones\\MIGRACIONES SGV DICIEMBRE 2022 28.12.2022.xlsx\n",
-      "['Cierre Caja', 'Del 01/11/2022', 'Cierre Caja', None, 'CCAJ-LP08/251/22', 'CCAJ-LP08/251/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 02/11/2022', 'Cierre Caja', None, 'NO HUBO CIERRES DE CAJA, FERIADO NACIONAL TODOSANTOS.', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 03/11/2022', 'Cierre Caja', None, 'CCAJ-LP08/252/22', 'CCAJ-LP08/252/22', 'CCAJ-LP08/252/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 04/11/2022', 'Cierre Caja', None, 'CCAJ-LP08/253/22', 'CCAJ-LP08/253/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 05/11/2022', 'Cierre Caja', None, 'CCAJ-LP08/254/22', 'CCAJ-LP08/254/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 07/11/2022', 'Cierre Caja', None, 'CCAJ-LP08/255/22', 'CCAJ-LP08/255/22', 'CCAJ-LP08/255/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 08/11/2022', 'Cierre Caja', None, 'CCAJ-LP08/256/22', 'CCAJ-LP08/256/22', 'CCAJ-LP08/256/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 09/11/2022', 'Cierre Caja', None, 'CCAJ-LP08/257/22', 'CCAJ-LP08/257/22', 'CCAJ-LP08/257/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 10/11/2022', 'Cierre Caja', None, 'CCAJ-LP08/258/22', 'CCAJ-LP08/258/22', 'CCAJ-LP08/258/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 11/11/2022', 'Cierre Caja', None, 'CCAJ-LP08/259/22', 'CCAJ-LP08/259/22', 'CCAJ-LP08/259/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 12/11/2022', 'Cierre Caja', None, 'CCAJ-LP08/260/22', 'CCAJ-LP08/260/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 14/11/2022', 'Cierre Caja', None, 'CCAJ-LP08/261/22', 'CCAJ-LP08/261/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 15/11/2022', 'Cierre Caja', None, 'CCAJ-LP08/262/22', 'CCAJ-LP08/262/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 16/11/2022', 'Cierre Caja', None, 'CCAJ-LP08/263/22', 'CCAJ-LP08/263/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 17/11/2022', 'Cierre Caja', None, 'CCAJ-LP08/264/22', 'CCAJ-LP08/264/22', 'CCAJ-LP08/264/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 18/11/2022', 'Cierre Caja', None, 'CCAJ-LP08/265/22', 'CCAJ-LP08/265/22', 'CCAJ-LP08/265/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 19/11/2022', 'Cierre Caja', None, 'CCAJ-LP08/266/22', 'CCAJ-LP08/266/22', 'CCAJ-LP08/266/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 21/11/2022', 'Cierre Caja', None, 'CCAJ-LP08/267/22', 'CCAJ-LP08/267/22', 'CCAJ-LP08/267/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 22/11/2022', 'Cierre Caja', None, 'CCAJ-LP08/268/22', 'CCAJ-LP08/268/22', 'CCAJ-LP08/268/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 23/11/2022', 'Cierre Caja', None, 'CCAJ-LP08/269/22', 'CCAJ-LP08/269/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 24/11/2022', 'Cierre Caja', None, 'CCAJ-LP08/270/22', 'CCAJ-LP08/270/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 25/11/2022', 'Cierre Caja', None, 'CCAJ-LP08/271/22', 'CCAJ-LP08/271/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 26/11/2022', 'Cierre Caja', None, 'CCAJ-LP08/272/22', 'CCAJ-LP08/272/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 28/11/2022', 'Cierre Caja', None, 'CCAJ-LP08/273/22', 'CCAJ-LP08/273/22', 'CCAJ-LP08/273/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 29/11/2022', 'Cierre Caja', None, 'CCAJ-LP08/274/22', 'CCAJ-LP08/274/22', 'CCAJ-LP08/274/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 30/11/2022', 'Cierre Caja', None, 'CCAJ-LP08/275/22', 'CCAJ-LP08/275/22', 'CCAJ-LP08/275/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 01/12/2022', 'Cierre Caja', None, 'CCAJ-LP08/276/22', 'CCAJ-LP08/276/22', 'CCAJ-LP08/276/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 02/12/2022', 'Cierre Caja', None, 'CCAJ-LP08/277/22', 'CCAJ-LP08/277/22', 'CCAJ-LP08/277/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 03/12/2022', 'Cierre Caja', None, 'CCAJ-LP08/278/22', 'CCAJ-LP08/278/22', 'CCAJ-LP08/278/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 05/12/2022', 'Cierre Caja', None, 'CCAJ-LP08/279/22', 'CCAJ-LP08/279/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 06/12/2022', 'Cierre Caja', None, 'CCAJ-LP08/280/22', 'CCAJ-LP08/280/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 07/12/2022', 'Cierre Caja', None, 'CCAJ-LP08/281/22', 'CCAJ-LP08/281/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 08/12/2022', 'Cierre Caja', None, 'CCAJ-LP08/282/22', 'CCAJ-LP08/282/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 09/12/2022 al 11/12/2022', 'Cierre Caja', None, 'CCAJ-LP08/283/22', 'CCAJ-LP08/283/22', 'SAP', 'FECHA', None, None, 'CCAJ-LP08/284/22', 'CCAJ-LP08/284/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 12/12/2022', 'Cierre Caja', None, 'CCAJ-LP08/285/22', 'CCAJ-LP08/285/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 13/12/2022', 'Cierre Caja', None, 'CCAJ-LP08/286/22', 'CCAJ-LP08/286/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 14/12/2022', 'Cierre Caja', None, 'CCAJ-LP08/287/22', 'CCAJ-LP08/287/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 15/12/2022', 'Cierre Caja', None, 'CCAJ-LP08/288/22', 'CCAJ-LP08/288/22', 'CCAJ-LP08/288/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 16/12/2022', 'Cierre Caja', None, 'CCAJ-LP08/289/22', 'CCAJ-LP08/289/22', 'CCAJ-LP08/289/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 17/12/2022', 'Cierre Caja', None, 'CCAJ-LP08/290/22', 'CCAJ-LP08/290/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 19/12/2022', 'Cierre Caja', None, 'CCAJ-LP08/291/22', 'CCAJ-LP08/291/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 20/12/2022', 'Cierre Caja', None, 'CCAJ-LP08/292/22', 'CCAJ-LP08/292/22', 'CCAJ-LP08/292/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 21/12/2022', 'Cierre Caja', None, 'CCAJ-LP08/293/22', 'CCAJ-LP08/293/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 22/12/2022', 'Cierre Caja', None, 'CCAJ-LP08/294/22', 'CCAJ-LP08/294/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 23/12/2022', 'Cierre Caja', None, 'CCAJ-LP08/295/22', 'CCAJ-LP08/295/22', 'CCAJ-LP08/295/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 24/12/2022', 'Cierre Caja', None, 'CCAJ-LP08/296/22', 'CCAJ-LP08/296/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 26/12/2022', 'Cierre Caja', None, 'NO HUBO CIERRES DE CAJA, FERIADO POR NAVIDAD', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 27/12/2022', 'Cierre Caja', None, 'CCAJ-LP08/297/22', 'CCAJ-LP08/297/22', 'CCAJ-LP08/297/22', 'SAP', 'FECHA', None, None, 'Cierre Caja', 'Del 28/12/2022', 'Cierre Caja', None, 'CCAJ-LP08/298/22', 'CCAJ-LP08/298/22', 'SAP', 'FECHA']\n"
+      "30.12.2022\n",
+      "<class 'str'>\n"
      ]
     }
    ],
    "source": [
     "import os\n",
     "from usefulFunctions import *\n",
-    "wbPath = currentPathParentFolder\n",
-    "wbPath = os.path.join(wbPath, 'Migraciones')\n",
-    "x = 'MIGRACIONES SGV DICIEMBRE 2022 28.12.2022'\n",
-    "x = x + '.xlsx'\n",
-    "wbPath = os.path.join(wbPath, x)\n",
-    "print(wbPath)\n",
-    "wb = load_workbook(wbPath)\n",
-    "sheet = wb['AG. ACHUMANI']\n",
-    "\n",
-    "sheetList = []\n",
-    "\n",
-    "for cell in sheet['A']:\n",
-    "    sheetList.append(cell.value)\n",
-    "\n",
-    "print(sheetList)\n",
+    "print(today())\n",
+    "print(type(today()))\n",
     "\n"
    ]
   },
