intermedio de bot5GUI -v 1.0

--- a/src/aprendiendo.ipynb
+++ b/src/aprendiendo.ipynb
@@ -72,261 +72,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "l = ['z', 'z', 'z', 'z', 'z', 'z', 'z', 'z', 'z', 'z', 'z', 'z', 'z', 'z', 'z', 'z', 'z', 'z', 'z', 'z', 'z', 'z', 'z']\n",
-    "print(len(l))"
+    "import shutil\n",
+    "\n",
+    "shutil.copy(r\"C:\\Users\\crist\\OneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\\Venado\\Cris\\Bot5\\Cuentas recaudadoras\\CUENTAS DE CAJA IVSA.xlsx\", r\"C:\\Users\\crist\\Desktop\\Hola.xlsx\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PARADA/ROJASJUANGILBERTO-\n",
-      "PARADA ROJAS JUAN GILBERTO\n",
-      "['/', '-']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import re\n",
+    "import tkinter as tk\n",
     "\n",
-    "\n",
-    "l = '9811-237828 PARADA /ROJAS JUAN GILBERTO-'\n",
-    "\n",
-    "l = l[12:]\n",
-    "l2 = l.replace(' ', '')\n",
-    "x = re.findall(r'[\\W]', l2)\n",
-    "\n",
-    "for i in x:\n",
-    "    l = l.replace(i, '')\n",
-    "print(l2)\n",
-    "print(l)\n",
-    "print(x)\n"
+    "wd = tk.Tk()\n",
+    "wd.title(\"Hola\")\n",
+    "wd.geometry(\"300x300\")\n",
+    "op = tk.IntVar()\n",
+    "op1 = tk.Radiobutton(wd, text = \"Heble\", variable = op, value = 1, command=lambda: print('Hola'))\n",
+    "op1.pack()\n",
+    "wd.mainloop()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GENARO VALVERDE RIBERA\n",
-      "['04597352SC ']\n"
+      "1920 1080\n",
+      "<class 'int'>\n",
+      "<class 'int'>\n"
      ]
     }
    ],
    "source": [
-    "import re\n",
+    "import pyautogui as pg\n",
     "\n",
-    "l = '04597352SC GENARO VALVERDE RIBERA'\n",
-    "x = re.findall(r'\\d+-*\\d+\\w*\\s', l)\n",
+    "a, b = pg.size()\n",
     "\n",
-    "for i in x:\n",
-    "    l = l.replace(i, '')\n",
-    "print(l)\n",
-    "print(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " habla, bro\n"
-     ]
-    }
-   ],
-   "source": [
-    "l = ' habla, bro'\n",
-    "l = l.replace('x', '')\n",
-    "print(l)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GA!\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'i' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [25], line 10\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[39mif\u001b[39;00m x[\u001b[39m0\u001b[39m] \u001b[39mand\u001b[39;00m x[\u001b[39m1\u001b[39m] \u001b[39mand\u001b[39;00m x[\u001b[39m2\u001b[39m] \u001b[39min\u001b[39;00m l:\n\u001b[0;32m      8\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mGA!\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m---> 10\u001b[0m \u001b[39mif\u001b[39;00m [i \u001b[39min\u001b[39;00m x] \u001b[39min\u001b[39;00m l:\n\u001b[0;32m     11\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mGA!\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     12\u001b[0m \u001b[39mprint\u001b[39m(x)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'i' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "import re\n",
-    "\n",
-    "l = 'PARADA ROJAS JUAN GILBERTO xd'\n",
-    "x = re.split(r' ', l)\n",
-    "x = x[:3]\n",
-    "#x[2]  = 'xdd'\n",
-    "if x[0] and x[1] and x[2] in l:\n",
-    "    print('GA!')\n",
-    "\n",
-    "if [i in x] in l:\n",
-    "    print('GA!')\n",
-    "print(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "holabro\n"
-     ]
-    }
-   ],
-   "source": [
-    "l = ' hola '\n",
-    "l = l.strip()\n",
-    "l = l + 'bro'\n",
-    "print(l)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a\n",
-      "None\n",
-      "b\n",
-      " \n",
-      "f\n",
-      "None\n",
-      "None\n",
-      "g\n",
-      "None\n",
-      "f\n",
-      "None\n",
-      "f\n",
-      "f\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "r\n",
-      "None\n",
-      "None\n",
-      "None\n",
-      "y\n"
-     ]
-    }
-   ],
-   "source": [
-    "from openpyxl import load_workbook\n",
-    "\n",
-    "wb = load_workbook(r\"C:\\Users\\crist\\Desktop\\Libro1.xlsx\")\n",
-    " \n",
-    "sheet = wb.active\n",
-    " \n",
-    "\n",
-    "for cell in sheet['A']:\n",
-    "    print(cell.value)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 a\n",
-      "1 b\n",
-      "2 c\n",
-      "3 d\n",
-      "4 e\n",
-      "5 f\n",
-      "6 g\n",
-      "7 h\n",
-      "8 i\n",
-      "9 j\n"
-     ]
-    }
-   ],
-   "source": [
-    "l = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j']\n",
-    "for i, j in enumerate(l):\n",
-    "    print(i, j)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "30.12.2022\n",
-      "<class 'str'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "from usefulFunctions import *\n",
-    "print(today())\n",
-    "print(type(today()))\n",
-    "\n"
+    "print(a,b)\n",
+    "print(type(a))\n",
+    "print(type(b))\n"
    ]
   },
   {
