--- a/src/aprendiendo.ipynb
+++ b/src/aprendiendo.ipynb
@@ -125,6 +125,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola2\n",
+      "Hola\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = 2 \n",
+    "match l:\n",
+    "    case 1:\n",
+    "        print(\"Hola1\")\n",
+    "    case 2:\n",
+    "        print(\"Hola2\")\n",
+    "\n",
+    "print('Hola')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -147,7 +172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 (tags/v3.10.8:aaaf517, Oct 11 2022, 16:50:30) [MSC v.1933 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
