sigue faltando lo mismo

--- a/src/aprendiendo.ipynb
+++ b/src/aprendiendo.ipynb
@@ -150,6 +150,67 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\crist\\OneDrive - UNIVERSIDAD NACIONAL DE INGENIERIA\\Venado\\Cris\\Bot5\\Cuentas recaudadoras\\CUENTAS DE CAJA IVSA.xlsx\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os \n",
+    "import usefulFunctions\n",
+    "\n",
+    "x = os.path.join(usefulFunctions.currentPathParentFolder, 'Cuentas recaudadoras', 'CUENTAS DE CAJA IVSA.xlsx')\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function wm_iconphoto in module tkinter:\n",
+      "\n",
+      "wm_iconphoto(self, default=False, *args)\n",
+      "    Sets the titlebar icon for this window based on the named photo\n",
+      "    images passed through args. If default is True, this is applied to\n",
+      "    all future created toplevels as well.\n",
+      "    \n",
+      "    The data in the images is taken as a snapshot at the time of\n",
+      "    invocation. If the images are later changed, this is not reflected\n",
+      "    to the titlebar icons. Multiple images are accepted to allow\n",
+      "    different images sizes to be provided. The window manager may scale\n",
+      "    provided icons to an appropriate size.\n",
+      "    \n",
+      "    On Windows, the images are packed into a Windows icon structure.\n",
+      "    This will override an icon specified to wm_iconbitmap, and vice\n",
+      "    versa.\n",
+      "    \n",
+      "    On X, the images are arranged into the _NET_WM_ICON X property,\n",
+      "    which most modern window managers support. An icon specified by\n",
+      "    wm_iconbitmap may exist simultaneously.\n",
+      "    \n",
+      "    On Macintosh, this currently does nothing.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tkinter as tk\n",
+    "help(tk.Tk.iconphoto)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -172,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 (tags/v3.10.8:aaaf517, Oct 11 2022, 16:50:30) [MSC v.1933 64 bit (AMD64)]"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
